* remove a leftover 'use HTTP::Request' from Smokeping::Master -- niko
* document the LWP dependency of the Smokeping::Slave module -- niko
* fix restart behaviour of clients in multiprocess mode. now we just send
  ourself a SIGHUP and let 'it' happen -- tobi

* make sure tsmoke sends mime conformant mails -- tobi

2007/10/29 -- released version 2.2.7

* Make slaves with FQDN work properly -- tobi
* Report when *** slaves *** section and slaves statements in the
  target section do not agree. -- tobi
* Make tsmoke work with multihost targets -- tobi
* Do not force a page reload more frequently than every 120s -- tobi
* Make sure slaves in targets match up with entries in the slaves section -- tobi

2007/10/28 -- released version 2.2.6
* removed some cruft from the release archive -- tobi
* fixed release process to prevent furture cruft -- tobi
* use curl --manual to figure which options are supported (this was in 2.2.5
  already) --tobi

2007/10/27 -- released version 2.2.5

* removed all the 'live' tests from the echoping probes --niko

* log a warning message on the first 'round' of pinging if curl or 
  echoping exits with non-zero status --niko

* fixed parsing of slaves statements in config file. This did not work at
  all it seems --tobi

* allow rightclicks in the legnd area of the zoom image. this allows to save
  the image. -- tobi

* In the SSH probe let the user configure the port to use when talking to
  the client --tobi

* Make master/slave work when slave names contain uppercase letters and full
  dots. -- tobi

* Allow slave-name to be configured -- tobi

* switched to config grammar 1.10  -- tobi

* make sure reload_config reloads in any case even when the config has not changed ... 
  with this we solve the problem that maybe some @include configs have changed
  which we would not find out otherwise -- tobi

* updated cropper: when selecting something outside the graph, multiply by
  10. Use this to zoom out -- tobi
